@@ -3,7 +3,9 @@ Changes in version 1.2.3
 
   * video and sound output can be recorded to AVI files
   * more accurate colors in NTSC mode
-  * minor TED sound improvement
+  * TED sound emulation improvements
+  * added hue shift to the display configuration options
+  * minor optimizations in serial floppy drive emulation
 
 Changes in version 1.2.2
 ------------------------
